# basecall

./: ANN.cpp  ANN.h  BB.cpp  BB.h  CDFilter.cpp  CDFilter.h  CDReconstruct.cpp  CDReconstruct.h  CMakeLists.txt  FFT.cpp  FFT.h  GUI.cpp  GUI.h  GaussInterpolation.cpp  GaussInterpolation.h  Intensity.cpp  Intensity.h  LeastSquare.h  ML.h  Makefile  Makefile_block  Makefile_tile  Metrics.cpp  Metrics.h  README.md  RLE.cpp  RLE.h  affineTransformation.cpp  affineTransformation.h  basecalling.cpp  bayescall.cpp  bayescall.h  block.cpp  block.h  calculateScore.cpp  calculateScore.h  calling.cpp  calling.h  charity.cpp  charity.h  (+99 more)
block/: test_block.cpp
tile/: test_tile.cpp
